--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,12 @@
-/* Reset styles */
-body, h1, h2, p, label, input, button {
-    margin: 0;
-    padding: 0;
-}
+/* styles.css */
 
 body {
+    margin: 0;
+    padding: 0;
+    background-image: url('./img/opbackground.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -12,12 +14,6 @@ body {
     justify-content: center;
     height: 100vh;
     position: relative;
-    margin: 0;
-    padding: 0;
-    background-image: url('./img/opbackground.webp');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
 }
 
 body::before {
@@ -32,56 +28,21 @@ body::before {
     z-index: -5;
 }
 
-/* Header styles */
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
+h1, form {
+    position: relative;
+    z-index: 1;
+}
+
+h1 {
     text-align: center;
-}
-
-/* Navigation styles */
-nav {
-    background-color: #444;
-    padding: 10px;
-    text-align: center;
-}
-
-nav a {
     color: white;
-    padding: 10px;
-    text-decoration: none;
-    margin: 0 10px;
-    transition: color 0.3s;
 }
 
-nav a:hover {
-    color: #ffcc00;
-}
-
-/* Section styles */
-section {
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 20px;
-    margin: 20px 0;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Footer styles */
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
-}
-
-/* Form styles */
 form {
     max-width: 600px;
-    width: 80%;
-    margin: 0 auto;
-    background-color: rgba(255, 255, 255, 0.9);
+    width: 300px;
+    height: auto;
+    background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -90,19 +51,21 @@ form {
 label {
     display: block;
     margin-bottom: 8px;
-    font-weight: bold;
 }
 
 input {
     width: 100%;
-    padding: 10px;
+    padding: 8px;
     margin-bottom: 16px;
     box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 5px;
 }
 
-button {
+p {
+    color: rgb(255, 255, 255);
+    margin-bottom: 16px;
+}
+
+#createprofile {
     background-color: #4CAF50;
     color: white;
     padding: 10px 15px;
@@ -111,6 +74,12 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+#createprofile:hover {
     background-color: #45a049;
+}
+
+img {
+    z-index: 2;
+    max-width: 300px;
+    max-height: auto;
 }
