--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Welcome Page</title>
-    <link rel="stylesheet" href="style2.css">
+    <!-- Correct the path to your stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <!-- Update the path to your logo image -->
-
-   
- <img src='img/Untitled design (1)-PhotoRoom.png-PhotoRoom.png' alt="Logo"> 
-  <h1> Login </h1>
+   <img src='img/Untitled design (1)-PhotoRoom.png-PhotoRoom.png' alt="Logo"> 
+   <h1> Login </h1>
     <form method="POST">
         
         <label for="username">Username:</label>
